istio-crd/base-vdc-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  annotations: {}
  name: vdc-gateway
  namespace: vdc
spec:
  selector:
    istio: ali-vdc-test-istio-system-gateway
  servers:
    - hosts:
        - cloud-billing-preview.cloud-uat.zilliz.cn
        - cloud-billing.cloud-uat.zilliz.cn
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
    - hosts:
        - cloud-billing-preview.cloud-uat.zilliz.cn
        - cloud-billing.cloud-uat.zilliz.cn
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: vdc-cloud-uat-zilliz-cn-autocertmanager
        mode: SIMPLE
