istio-crd/cloud-billing-destination.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: cloud-billing-destination
  namespace: vdc
spec:
  host: cloud-billing
  subsets:
  - name: feature-longtermv2
    labels:
      version: feature-longtermv2
  - name: base
    labels:
      version: base
