istio-crd/cloud-billing-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cloud-billing-virtualservice
  namespace: vdc
spec:
  hosts:
  - cloud-billing.cloud-uat.zilliz.cn
  - cloud-billing-preview.cloud-uat.zilliz.cn
  - cloud-billing
  gateways:
  - vdc-gateway
  - mesh
  http:
  - match:
    - headers:
        x-env:
          exact: feature-longtermv2
    route:
    - destination:
        host: cloud-billing
        subset: feature-longtermv2
  - match:
    - headers:
        x-env:
          exact: base
    route:
    - destination:
        host: cloud-billing
        subset: base
  - route:
        - destination:
            host: cloud-billing
            subset: base
